--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "eslint": "7.19.0",
+    "eslint-plugin-react": "7.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "eslint": "7.19.0",
-    "eslint-plugin-react": "7.22.0",
-    "stylelint": "13.9.0"
+    "stylelint": "13.9.0",
+    "stylelint-config-rational-order": "0.1.2"
   },
   "browserslist": {
     "production": [
