--- a/server/PlanPoker.Infrastructure/PlanPoker.Infrastructure.csproj
+++ b/server/PlanPoker.Infrastructure/PlanPoker.Infrastructure.csproj
@@ -1,13 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PlanPoker.Domain\PlanPoker.Domain.csproj" />
-    <ProjectReference Include="..\PlanPoker.Infrastructure\PlanPoker.Infrastructure.csproj" />
   </ItemGroup>
-
 
 </Project>
