--- a/client/package.json
+++ b/client/package.json
@@ -10,32 +10,40 @@
     "eslint": "eslint src/**/*.tsx src/**/*.ts",
     "eslint:fix": "eslint src/**/*.tsx src/**/*.ts --fix",
     "stylelint": "stylelint \"src/**/*.css\"",
-    "stylelint:fix": "stylelint \"src/**/*.css\" --fix"
+    "stylelint:fix": "stylelint \"src/**/*.css\" --fix",
+    "prettier:fix": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "prettier:check": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "pre-commit": "lint-staged",
+    "prepare": "cd .. && husky install client/.husky"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
-    "@types/redux": "^3.6.0",
     "@types/react-redux": "^7.1.16",
-    "@types/classnames": "^2.2.11",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "stylelint": "13.9.0",
-    "stylelint-config-rational-order": "0.1.2",
-    "eslint": "7.19.0",
-    "eslint-plugin-react": "7.22.0"
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "7.22.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.0",
+    "prettier": "^2.4.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-rational-order": "^0.1.2"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "classnames": "2.2.6",
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.3"
   },
   "browserslist": {
     "production": [
@@ -48,5 +56,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run prettier:fix",
+      "npm run eslint:fix"
+    ],
+    "*.css": "npm run stylelint --fix"
   }
 }
