--- a/server/PlanPoker.Infrastructure/PlanPoker.Infrastructure.csproj
+++ b/server/PlanPoker.Infrastructure/PlanPoker.Infrastructure.csproj
@@ -23,6 +23,11 @@
     <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\PlanPoker.Domain\PlanPoker.Domain.csproj" />
   </ItemGroup>
